--- a/FE2_Restaurant_Mutiple_Pages/contact.html
+++ b/FE2_Restaurant_Mutiple_Pages/contact.html
@@ -108,7 +108,7 @@
     <!-- End Store Info Section -->
 
     <!-- Contact Form Section -->
-    <section class="form" id="form" data-aos="fade-down">
+    <section class="contact_form" id="form" data-aos="fade-down">
         <div class="container">
             <h3 class="form__title">Contact & Inquiry</h3>
             <div class="form__wrapper">
