--- a/FE2_Restaurant_Mutiple_Pages/index.html
+++ b/FE2_Restaurant_Mutiple_Pages/index.html
@@ -131,7 +131,7 @@
             </div>
         </div>
     </section>
-    <!-- Store End section -->
+    <!-- Store Info End section -->
 
 
     <!-- Our Specials Section -->
