--- a/FE2_Restaurant_Mutiple_Pages/index.html
+++ b/FE2_Restaurant_Mutiple_Pages/index.html
@@ -75,8 +75,8 @@
                             variety of food experience in both casual and fine 
                             dining environment.</p>
                         <div class="button__wrapper">
-                            <a href="#" class="btn primary-btn">Explore Menu</a>
-                            <a href="#" class="btn">Book Table</a>
+                            <a href="menu.html" class="btn primary-btn">Explore Menu</a>
+                            <a href="booking.html" class="btn">Book Table</a>
                         </div>
                     </div>
                 </div>
